src/workspace/snapshots/protols__workspace__workspace_symbol__test__author_symbols.snap
---
source: src/workspace/workspace_symbol.rs
expression: author_symbols
---
- name: Author
  kind: 23
  location:
    uri: "file:///home/runner/work/protols/protols/src/workspace/input/b.proto"
    range:
      start:
        line: 5
        character: 0
      end:
        line: 14
        character: 1
- name: Author
  kind: 23
  location:
    uri: "file://input/b.proto"
    range:
      start:
        line: 5
        character: 0
      end:
        line: 14
        character: 1
