src/workspace/snapshots/protols__workspace__workspace_symbol__test__workspace_symbols-2.snap
---
source: src/workspace/workspace_symbol.rs
expression: author_symbols
---
- name: Author
  kind: 23
  location:
    uri: "file://<redacted>/src/workspace/input/b.proto"
    range:
      start:
        line: 4
        character: 0
      end:
        line: 14
        character: 1
- name: author
  kind: 8
  containerName: Book
  location:
    uri: "file://<redacted>/src/workspace/input/a.proto"
    range:
      start:
        line: 11
        character: 3
      end:
        line: 11
        character: 21
