src/workspace/snapshots/protols__workspace__workspace_symbol__test__workspace_symbols-3.snap
---
source: src/workspace/workspace_symbol.rs
expression: address_symbols
---
- name: Address
  kind: 23
  containerName: Author
  location:
    uri: "file://<redacted>/src/workspace/input/b.proto"
    range:
      start:
        line: 8
        character: 3
      end:
        line: 11
        character: 4
