src/workspace/snapshots/protols__workspace__workspace_symbol__test__workspace_symbols.snap
---
source: src/workspace/workspace_symbol.rs
expression: all_symbols
---
- name: Address
  kind: 23
  containerName: Author
  location:
    uri: "file://<redacted>/src/workspace/input/b.proto"
    range:
      start:
        line: 8
        character: 3
      end:
        line: 11
        character: 4
- name: Author
  kind: 23
  location:
    uri: "file://<redacted>/src/workspace/input/b.proto"
    range:
      start:
        line: 4
        character: 0
      end:
        line: 14
        character: 1
- name: Baz
  kind: 23
  containerName: Foobar
  location:
    uri: "file://<redacted>/src/workspace/input/c.proto"
    range:
      start:
        line: 7
        character: 3
      end:
        line: 10
        character: 4
- name: Book
  kind: 23
  location:
    uri: "file://<redacted>/src/workspace/input/a.proto"
    range:
      start:
        line: 9
        character: 0
      end:
        line: 16
        character: 1
- name: Foobar
  kind: 23
  location:
    uri: "file://<redacted>/src/workspace/input/c.proto"
    range:
      start:
        line: 4
        character: 0
      end:
        line: 13
        character: 1
- name: SomeSecret
  kind: 23
  location:
    uri: "file://<redacted>/src/workspace/input/y.proto"
    range:
      start:
        line: 4
        character: 0
      end:
        line: 7
        character: 1
- name: Why
  kind: 23
  location:
    uri: "file://<redacted>/src/workspace/input/x.proto"
    range:
      start:
        line: 6
        character: 0
      end:
        line: 11
        character: 1
- name: a
  kind: 8
  containerName: Foobar
  location:
    uri: "file://<redacted>/src/workspace/input/c.proto"
    range:
      start:
        line: 12
        character: 3
      end:
        line: 12
        character: 13
- name: author
  kind: 8
  containerName: Book
  location:
    uri: "file://<redacted>/src/workspace/input/a.proto"
    range:
      start:
        line: 11
        character: 3
      end:
        line: 11
        character: 21
- name: b
  kind: 8
  containerName: Baz
  location:
    uri: "file://<redacted>/src/workspace/input/c.proto"
    range:
      start:
        line: 9
        character: 6
      end:
        line: 9
        character: 18
- name: ctx
  kind: 8
  containerName: Book
  location:
    uri: "file://<redacted>/src/workspace/input/a.proto"
    range:
      start:
        line: 15
        character: 3
      end:
        line: 15
        character: 31
- name: foo
  kind: 8
  containerName: Book
  location:
    uri: "file://<redacted>/src/workspace/input/a.proto"
    range:
      start:
        line: 12
        character: 3
      end:
        line: 12
        character: 26
- name: foo
  kind: 8
  containerName: Author
  location:
    uri: "file://<redacted>/src/workspace/input/b.proto"
    range:
      start:
        line: 13
        character: 3
      end:
        line: 13
        character: 19
- name: name
  kind: 8
  containerName: Author
  location:
    uri: "file://<redacted>/src/workspace/input/b.proto"
    range:
      start:
        line: 6
        character: 3
      end:
        line: 6
        character: 19
- name: reason
  kind: 8
  containerName: Book
  location:
    uri: "file://<redacted>/src/workspace/input/a.proto"
    range:
      start:
        line: 14
        character: 3
      end:
        line: 14
        character: 28
- name: reason
  kind: 8
  containerName: Why
  location:
    uri: "file://<redacted>/src/workspace/input/x.proto"
    range:
      start:
        line: 8
        character: 3
      end:
        line: 8
        character: 21
- name: secret
  kind: 8
  containerName: SomeSecret
  location:
    uri: "file://<redacted>/src/workspace/input/y.proto"
    range:
      start:
        line: 6
        character: 3
      end:
        line: 6
        character: 21
- name: secret
  kind: 8
  containerName: Why
  location:
    uri: "file://<redacted>/src/workspace/input/x.proto"
    range:
      start:
        line: 9
        character: 3
      end:
        line: 9
        character: 43
- name: secret2
  kind: 8
  containerName: Why
  location:
    uri: "file://<redacted>/src/workspace/input/x.proto"
    range:
      start:
        line: 10
        character: 3
      end:
        line: 10
        character: 33
- name: z
  kind: 8
  containerName: Book
  location:
    uri: "file://<redacted>/src/workspace/input/a.proto"
    range:
      start:
        line: 13
        character: 3
      end:
        line: 13
        character: 32
- name: zip
  kind: 8
  containerName: Address
  location:
    uri: "file://<redacted>/src/workspace/input/b.proto"
    range:
      start:
        line: 10
        character: 6
      end:
        line: 10
        character: 20
